feature(#4179): add new patterns to flapping rules
